# substrate-krm

./: Cargo.toml  dependencies.txt
pallets/chain_config/: Cargo.toml
pallets/chain_config/src/: lib.rs
pallets/posts/: Cargo.toml
pallets/posts/src/: lib.rs
