[package]
name = "pallet-posts"
version = "0.1.0"
edition = "2021"

[dependencies]
frame-support = { version = "4.0.0-dev", default-features = false }
frame-system = { version = "4.0.0-dev", default-features = false }
sp-runtime = { version = "4.0.0-dev", default-features = false }
sp-std = { version = "4.0.0-dev", default-features = false }

[dev-dependencies]
sp-core = { version = "4.0.0-dev", default-features = false }

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-std/std",
]
